docs: refresh readme and quick starts